---
config:
  theme: dark
---
erDiagram
    PRODUCT_FAMILY {
        int product_id PK "The 5-digit ECWID ID (e.g., 00845)"
        string base_name "Human Readable Base Name"
    }

    PRODUCT_IDENTITY {
        bigint id PK
        int product_id FK "Links to Family"
        string type "Enum: Base, B, P, K, S"
        int lci "Local Component Index (1-99). Null if Type!=P"
        string physical_class "From Registry: E, C, P, S, W, A"
        string generated_upis_h UK "Computed: 00845-P-1"
        string hex_signature "The 32-bit HEX encoding"
    }
    PRODUCT_VARIANT {
        bigint id PK
        bigint identity_id FK "Links to Layer 1"
        string color_code "BK, WY, SV, etc."
        string condition_code "N, R, or Null (Used)"
        string full_sku UK "Computed: 00845-P-1-WY-N"
        string zoho_item_id, 
        string zoho_sync_status,
        datetime zoho_last_synced_at,
        boolean is_active "Soft delete flag"
    }
    BUNDLE_COMPONENT {
        bigint parent_identity_id FK "The Bundle (02391-B)"
        bigint child_identity_id FK "The Component (00845-P-1)"
        int quantity_required
        string role "Primary, Accessory, Satellite"
    }
    PLATFORM_LISTING {
        bigint id PK
        bigint variant_id FK "FIXED: Links to the specific Variant"
        string platform "Amazon, eBay, Ecwid"
        string external_ref_id "The Platform's ID (ASIN, ItemID)"
        decimal listing_price "The price pushed to the platform"
        jsonb platform_metadata "Stores hashtags, shipping profiles, etc."
    }
    INVENTORY_ITEM {
        bigint id PK
        string serial_number UK
        bigint variant_id FK "FIXED: Links to specific Variant"
        decimal cost_basis "Accounting Value (COGS)"
        string location_code "Bin A1, Shelf 2"
        string status "AVAILABLE, SOLD, RMA, DAMAGED"
        datetime created_at
    }
    PRODUCT_FAMILY ||--|{ PRODUCT_IDENTITY : owns
    PRODUCT_IDENTITY ||--|{ PRODUCT_VARIANT : has_variants
    PRODUCT_IDENTITY ||--|{ BUNDLE_COMPONENT : composed_of
    PRODUCT_IDENTITY ||--|{ BUNDLE_COMPONENT : component_of
    
    PRODUCT_VARIANT ||--o{ PLATFORM_LISTING : listed_as
    PRODUCT_VARIANT ||--o{ INVENTORY_ITEM : physical_instance